...
                android:orientation="vertical">
                <RelativeLayout
                    xmlns:android="http://schemas.android.com/apk/res/android"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">
                    <ImageView android:id="@+id/image"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:src="@drawable/zap300"
                        android:contentDescription="@string/immobile" />
                    <LinearLayout android:id="@+id/linear_layout_subtype"
                        android:layout_width="match_parent"
...
