<resources>
    <string name="app_name">ZapImoveis</string>
    <string name="test_address">Rua Almeida de Morais 111</string>
    <string name="address">Endereço</string>
    <string name="test_type">Apartamento Padrao</string>
    <string name="test_price">R$25000.00</string>
    <string name="test_detail_list">4 dorms, 3 vagas, 168m²</string>
    <string name="test_sub_sale">PRONTO PARA MORAR</string>
    <string name="immobile">immobile</string>
    <string name="test_type_immobile">Apartamento</string>
    <string name="type_immobile">Tipo de Imovel</string>
    <string name="price">Preço</string>
    <string name="dorms">Dorms</string>
    <string name="value_sell">Valor de Venda</string>
    <string name="suite">Suite(s)</string>
    <string name="vacancy">Vaga(s)</string>
    <string name="area">Area(m²)</string>
    <string name="test_dorms">4</string>
    <string name="test_vacancy">2 a 3</string>
    <string name="test_area">128 a 150</string>
    <string name="description">Descrição</string>
    <string name="test_description">Lorem Ipsum é simplesmente uma simulação de texto da indústria tipográfica e de impressos, e vem sendo utilizado desde o século XVI, quando um impressor desconhecido pegou uma bandeja de tipos e os embaralhou para fazer um livro de modelos de tipos. Lorem Ipsum sobreviveu não só a cinco séculos, como também ao salto para a editoração eletrônica, permanecendo essencialmente inalterado.</string>
    <string name="type_sell">Tipo de Venda</string>
    <string name="alert">Alerta</string>
    <string name="sendSuccess">Enviado com sucesso! Obrigado por utilizar a ZapImóveis</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancelar</string>
    <string name="name">Nome</string>
    <string name="email">Email</string>
    <string name="phone">Telefone</string>
    <string name="required">Campo obrigatorio</string>
    <string name="send_message">Enviar mensagem</string>
    <string name="detail">Detalhe</string>
    <string name="please_wait">Estamos enviando seus dados</string>
    <string name="wait">Aguarde…</string>
    <string name="name_advertiser">Nome do anunciante</string>
    <string name="test_name">Rodrigo Vianna CAlixto de Oliveira</string>
    <string name="sale">Oferta</string>
    <string name="feature_common">Outras Caracteristicas em comum</string>
    <string name="txt_feature_common">Características das Áreas Comuns: </string>
    <string name="txt_information_complementary">Informações complementares: </string>
    <string name="short_price">Menor valor</string>
    <string name="condominium">Condominio</string>
    <string name="date_refresh">Data de Atualização: </string>
    <string name="test_price_condominium">R$2500,00</string>
    <string name="txt_dorms">Numero de dormitórios</string>
    <string name="sort_itens">Ordenando os itens</string>
    <string name="relevant">Maior relevancia</string>
    <string name="txt_error">Desculpe, no momento não foi possível completar esta ação, tente novamente mais tarde</string>
    <string name="valid_email">Não é um email válido</string>
    <string name="valid_phone">Formato de telefone invalido</string>
</resources>
