<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <EditText
        android:layout_marginStart="@dimen/activity_horizontal_margin"
        android:id="@+id/name_dialog"
        android:inputType="text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginLeft="4dp"
        android:layout_marginRight="4dp"
        android:layout_marginBottom="15dp"
        android:hint="@string/name" />
    <EditText
        android:layout_marginStart="@dimen/activity_horizontal_margin"
        android:id="@+id/email_dialog"
        android:inputType="textEmailAddress"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginLeft="4dp"
        android:layout_marginRight="4dp"
        android:layout_marginBottom="15dp"
        android:hint="@string/email" />
    <EditText
        android:layout_marginStart="@dimen/activity_horizontal_margin"
        android:id="@+id/phone_dialog"
        android:inputType="phone"
        android:maxLength="11"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginLeft="4dp"
        android:layout_marginRight="4dp"
        android:layout_marginBottom="15dp"
        android:hint="@string/phone" />
</LinearLayout>