<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools" tools:context=".main.view.FifteenActivity">

    <item android:id="@+id/menu_item_sort"
        android:icon="@drawable/ic_sort_white_24dp"
        android:orderInCategory="100"
        app:showAsAction="always"
        android:title="" />

</menu>